@@ -1,8 +1,0 @@
-## SECTION=initmethod_bbinit
-
-config DBUS_BBINIT_LINK
-	string
-	depends on DBUS_STARTSCRIPT
-	prompt "dbus"
-	default "S12dbus"
-
