@@ -1,16 +1,0 @@
-## SECTION=hosttools_noprompt
-
-config HOST_DBUS
-	tristate
-	select HOST_EXPAT
-	default ALLYES
-	help
-	  D-Bus is a message bus system, a simple way
-	  for applications to talk to one another. In
-	  addition to interprocess communication, D-Bus
-	  helps coordinate process lifecycle; it makes
-	  it simple and reliable to code a "single
-	  instance" application or daemon, and to launch
-	  applications and daemons on demand when their
-	  services are needed.
-
